# OpenCV-Features-Comparison

./: .gitignore  AlgorithmEstimation.cpp  AlgorithmEstimation.hpp  AllocationOverride.cpp  CMakeLists.txt  CollectedStatistics.cpp  CollectedStatistics.hpp  FeatureAlgorithm.cpp  FeatureAlgorithm.hpp  ImageTransformation.cpp  ImageTransformation.hpp  README.md  Thesis project.sln  Thesis project.vcxproj  Thesis project.vcxproj.filters  Util.cpp  Util.hpp  main.cpp
